--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.5.1",
     "@tailwindcss/vite": "^4.1.5",
+    "firebase": "^11.9.1",
     "framer-motion": "^12.10.1",
     "lucide-react": "^0.507.0",
     "motion": "^12.10.1",
+    "next": "^15.3.3",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.3",
+    "react-router-dom": "^7.6.2",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
